// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> Spec Snapshots should render a paragraph with a bold font 1`] = `
.c0 {
  display: block;
  font-size: 14px;
  font-weight: 700;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 16px;
  color: #3e3e40;
}

<div>
  <div
    class="c0"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at mattis lorem, id varius sem. Praesent commodo eu ex sit amet cursus
  </div>
</div>
`;

exports[`<Paragraph /> Spec Snapshots should render a paragraph with a colored font 1`] = `
.c0 {
  display: block;
  font-size: 14px;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 16px;
  color: #10aa40;
}

<div>
  <div
    class="c0"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at mattis lorem, id varius sem. Praesent commodo eu ex sit amet cursus
  </div>
</div>
`;

exports[`<Paragraph /> Spec Snapshots should render a paragraph with defaults 1`] = `
.c0 {
  display: block;
  font-size: 14px;
  font-weight: 400;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  line-height: 16px;
  color: #3e3e40;
}

<div>
  <div
    class="c0"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque at mattis lorem, id varius sem. Praesent commodo eu ex sit amet cursus
  </div>
</div>
`;
